--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Anyi Liu / Site Title"
+title                    : "Anyi(Andy) Liu"
 title_separator          : "-"
 name                     : &name "Your Name"
-description              : &description "personal description"
+description              : Associate Professor of Engineering
+Department of Computer Science and Engineering
+School of Engineering and Computer Science
+Oakland University
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -21,8 +24,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "anliu.png"
+  name             : "Anyi Liu"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
