--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,14 @@ author:
   avatar           : "anliu.png"
   name             : "Anyi Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "Associate Professor of Engineering
+Department of Computer Science and Engineering
+School of Engineering and Computer Science
+Oakland University"
+  location         : "Rochester, MI"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "anyiliu@oakland.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
