--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,8 @@ locale                   : "en-US"
 title                    : "Anyi(Andy) Liu"
 title_separator          : "-"
 name                     : &name "Your Name"
-description              : Associate Professor of Engineering
-Department of Computer Science and Engineering
-School of Engineering and Computer Science
+description: "Associate Professor of Engineering, Department of Computer Science and Engineering, School of Engineering and Computer Science, Oakland University"
+
 Oakland University
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -27,10 +26,7 @@ author:
   avatar           : "anliu.png"
   name             : "Anyi Liu"
   pronouns         : # example: "she/her"  
-  bio              : "Associate Professor of Engineering
-Department of Computer Science and Engineering
-School of Engineering and Computer Science
-Oakland University"
+  bio              : "Associate Professor at Oakland University"
   location         : "Rochester, MI"
   employer         : "Red Brick University"
   uri              : # URL
