--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "anliu.png"
+  avatar           : "anyiliu.png"
   name             : "Anyi Liu"
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor at Oakland University"
