--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Anyi Liu"
+  name             : "1"
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor at Oakland University"
   location         : "Rochester, MI"
