--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "liu-anyi/liu-anyi.github.io"
 author:
   # Biographic information
   avatar           : "anyiliu.jpg"
-  name             : "1"
+  name             : "Anyi Liu"
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor at Oakland University"
   location         : "Rochester, MI"
