--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor at Oakland University"
   location         : "Rochester, MI"
-  employer         : "Oakland University"
+  employer: "[Oakland University](https://www.oakland.edu)"
   uri              : # URL
   email            : "anyiliu@oakland.edu" 
 
