--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         :  "https://www.linkedin.com/in/anyi-liu-0852a52a/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
