--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,19 +8,19 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  # - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
+  #- title: "Portfolio"
     url: /portfolio/
         
  #  - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
+ # - title: "CV"
     url: /cv/
     
  #  - title: "Guide"
