--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Anyi(Andy) Liu"
+title                    : "Anyi(Andy) Liu1"
 title_separator          : "-"
 name                     : &name "Your Name"
 description: "Associate Professor of Engineering, Department of Computer Science and Engineering, School of Engineering and Computer Science, Oakland University"
