--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,10 @@
 # prevent it from being included in the site.
 
 main:
+
+  - title: "Anyi(Andy) Liu"
+    url: /
+    
   - title: "Publications"
     url: /publications/
 
