--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor at Oakland University"
   location         : " Rochester, MI"
-  employer         : "Oakland University[Oakland University](https://oakland.edu)"
+  employer         : "Oakland University"
   uri              : # URL
   email            : " anyiliu@oakland.edu" 
 
